# ZK_Zero_Trust

./: .gitignore  .gitmodules  Cargo.toml  Jwtfield_test.json  README.md  Request_test.json  batch_exec.py  data_analysis.py  flake.nix  generate_jwt.py  import_policy.py  jwt.rs  one_shot.py  performance_data.csv  run_compiler.sh  simple_analysis.py  simple_performance_plot.py
core/: Cargo.toml
core/src/: lib.rs  lib.rs.example  lib.sync-conflict-20251107-164538-X3KEST7.rs
data/end2end/: extract.py  gen_time_seconds  gen_time_seconds_groups  metrics.csv  proof_size_kb  proof_size_kb_groups  total_cycles_e5  user_cycles_e5  verify_time_ms
host/src/: main.rs
independent_experiment/json-lookup/: README.md  bench_impls.py  bench_results.md  jwt.rs
independent_experiment/json-lookup/data/: fields.txt  payload.json
independent_experiment/json-lookup/methods/guest/: Cargo.toml
independent_experiment/json-lookup/methods/guest/src/: key_table.rs  main.rs  main_old.rs  main_old_long.rs  main_positions.rs  main_serde.rs
independent_experiment/json-lookup/src/: main.rs
independent_experiment/regex/: .gitignore  Cargo.toml  opus4_1.json  opus4_performance.json  opus4_ruststd_performance.json  policy.json  policy_example.json  policy_performance.json  policy_ruststd_performance.json  qwen3_235B.json  qwen3_performance.json  qwen3_performance.json.old  qwen3_ruststd_performance.json  qwen3_testing.json  run_regex_cases.py
independent_experiment/regex/compile_regex/: Cargo.toml
independent_experiment/regex/compile_regex/src/: lib.rs  main.rs
independent_experiment/regex/methods/: Cargo.toml
independent_experiment/regex/methods/guest/: Cargo.toml
independent_experiment/regex/methods/guest/src/: main.rs  main.rs.optimize  regex.txt
independent_experiment/regex/raw_data/: analyze_performance.py  opus4_ruststd_performance.json  reef_opus4_performance.json  reef_proof_time.txt  reef_qwen3_performance.json  reef_verify_time.txt  ruststd_proof_time.txt  ruststd_verify_time.txt  zkvm_proof_time.txt  zkvm_verify_time.txt
independent_experiment/regex/src/: main.rs
independent_experiment/rsa-verify/: generate_jwt.py  jwt_key
independent_experiment/rsa-verify/methods/guest/: Cargo.toml
independent_experiment/rsa-verify/methods/guest/src/: main.rs
independent_experiment/rsa-verify/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs  main.rs.example  main.rs.hand  main.sync-conflict-20251107-164538-X3KEST7.rs
rsa_generate/: Cargo.toml  generate_jwt.py  jwt.rs
rsa_generate/methods/guest/: Cargo.toml
rsa_generate/methods/guest/src/: main.rs
rsa_generate/src/: lib.rs  main.rs
src/: main.rs
test_demo_matrix/core/: Cargo.toml
test_demo_matrix/core/src/: lib.rs
test_demo_matrix/host/: Cargo.toml
test_demo_matrix/host/src/: main.rs
test_demo_matrix/methods/guest/: Cargo.toml
test_demo_matrix/methods/guest/src/: main.rs
tools/: compile.py  example_input.xml  main.rs
