[package]
name = "policy"
version = "0.1.0"
edition = "2021"

[dependencies]
policy-core = { path = "core" }
policy-methods = { path = "methods" }
risc0-zkvm = { version = "3.0" }
# risc0-zkvm = { path = "../../risc0/zkvm" }
rand = { version = "0.8.4", features = ["std", "std_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex-automata = "0.4"
regex = "1.0"
base64 = "0.21"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]
