[package]
name = "policy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "3.0" , default-features = false }
# risc0-zkvm = { path = "../../../risc0/zkvm" , default-features = false }
rand = { version = "0.8.4", features = ["std", "std_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4", features = ["serde"] }
iso8601-duration = { version = "0.2", features = ["serde"] }
