[package]
name = "jwt-rsa-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21"
jwt-rsa-verify-methods = { path = "methods" }
rand = "0.8"
risc0-zkvm = { version = "3.0" }
rsa = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", features = ["oid"] }
signature = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.0"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]
