[package]
name = "policy"
version = "0.12.0"
edition = "2021"

[workspace]

[dependencies]
# serde_json = "1.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4", features = ["serde"] }
iso8601-duration = { version = "0.2", features = ["serde"] }
base64 = "0.21"
sha2 = { version = "0.10", features = ["oid"] }
rsa = "0.9"
signature = "2"
regex-automata = "0.4"
policy-core = { path = "../../core" }
# risc0-zkvm = { path = "../../../../risc0/zkvm" , default-features = false, features = [
#   "std",
# ] }
risc0-zkvm = { version = "3.0" , default-features = false, features = [
  "std",
] }

[patch.crates-io]
rsa = { git = "https://www.github.com/risc0/RustCrypto-RSA.git", rev = "v0.9.6-risczero.0" }
