[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
matrix-core = { path = "../core" }
risc0-zkvm = { version = "1.1.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
rand = { version = "0.8.4", features = ["std", "std_rng"] }
